--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ main {
 }
 
 .section-02 {
-  background-image: url('/public/image09.webp');
+  background-image: url('/image09.webp');
   width: 70%;
   display: flex;
   justify-content: center;
@@ -116,7 +116,7 @@ main {
 }
 
 .section-04 {
-  background-image: url('bg.jpg');
+  background-image: url('/bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
